--- a/web/application/templates/statistics.html
+++ b/web/application/templates/statistics.html
@@ -23,14 +23,14 @@
         <div class="content-wrapper">
             <div class="content">
                 <div class="grouped">
-                    <div id='scatter-plot'></div>
-                    <div id='box-plot'></div>
+                    <div id='scatter-plot' class="plot loading"></div>
+                    <div id='box-plot' class="plot loading"></div>
                 </div>
                 <div class="grouped">
-                    <div id='bar-plot'></div>
-                    <div id='bar-dpe-plot'></div>
+                    <div id='bar-plot' class="plot loading"></div>
+                    <div id='bar-dpe-plot' class="plot loading"></div>
                 </div>
-                <div id='heatmap-plot'></div>
+                <div id='heatmap-plot' class="plot loading"></div>
             </div>
         </div>
     </main>
