Updated plot layout

--- a/web/application/templates/statistics.html
+++ b/web/application/templates/statistics.html
@@ -21,7 +21,7 @@
         {% include "elements/menu.html" %}
 
         <div class="content-wrapper">
-            <div class="content">
+            <div class="content loading">
                 <div class="grouped">
                     <div id='scatter-plot' class="plot loading"></div>
                     <div id='box-plot' class="plot loading"></div>
