--- a/web/application/static/css/statistics.css
+++ b/web/application/static/css/statistics.css
@@ -6,7 +6,7 @@
     flex: 1;
 }
 
-.plot.loading {
+.loading .plot {
     height: 650px;
     margin: 2rem;
     background-color: var(--input-bg-color);
