Added Context page

--- a/web/application/templates/api-documentation.html
+++ b/web/application/templates/api-documentation.html
@@ -196,6 +196,7 @@ response <- GET(
 
 <!-- Custom JS -->
 <script src="{{ url_for('static', filename='js/utils.js') }}"></script>
+<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 <script src="{{ url_for('static', filename='js/api-documentation.js') }}"></script>
 
 </body>
