--- a/web/application/templates/statistics.html
+++ b/web/application/templates/statistics.html
@@ -49,6 +49,7 @@
     <script src="https://cdn.plot.ly/plotly-3.1.0.min.js"></script>
     <!-- Custom JS -->
     <script src="{{ url_for('static', filename='js/utils.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="{{ url_for('static', filename='js/plots.js') }}"></script>
 
 </body>
