--- a/web/application/static/css/predict.css
+++ b/web/application/static/css/predict.css
@@ -24,3 +24,9 @@ button.main {
     width: 100%;
     margin-top: 1rem;
 }
+
+select {
+    width: 100%;
+    margin-top: .5rem;
+    height: 3rem;
+}
