--- a/web/application/static/css/api-documentation.css
+++ b/web/application/static/css/api-documentation.css
@@ -215,6 +215,13 @@ section.description {
 }
 
 
+select {
+    width: 100%;
+    margin-top: .5rem;
+    height: 3rem;
+}
+
+
 
 /* JSON syntax hightlight */
 
