--- a/web/application/templates/predict.html
+++ b/web/application/templates/predict.html
@@ -30,16 +30,16 @@
                     <form action="" id="predict-form">
                         <div class="form-input">
                             <label for="address">Code postal</label>
-                            <input type="numeric" name="address" id="address" placeholder="69001">
+                            <input type="numeric" name="address" id="address" placeholder="69001" required>
                         </div>
                         <div class="input-group">
                             <div class="form-input">
                                 <label for="surface_habitable_logement">Surface habitable (m2)</label>
-                                <input type="number" name="surface_habitable_logement" id="surface_habitable_logement" placeholder="75">
+                                <input type="number" name="surface_habitable_logement" id="surface_habitable_logement" placeholder="75" required>
                             </div>
                             <div class="form-input">
                                 <label for="annee_construction">Année de construction</label>
-                                <input type="number" name="annee_construction" id="annee_construction" placeholder="2010">
+                                <input type="number" name="annee_construction" id="annee_construction" placeholder="2010" required>
                             </div>
                         </div>
                         <div class="input-group">
