Implemented results for Predict page
Results now show up on predict page. I also renamed variables related to cout to consommation (ajax, api, models, html, css, js)

--- a/web/application/static/css/api-documentation.css
+++ b/web/application/static/css/api-documentation.css
@@ -112,7 +112,7 @@ h1 {
     form .sub-form {
         display: none;
     }
-    form[data-tab-view="cout_chauffage"] .sub-form[data-tab="cout_chauffage"] {
+    form[data-tab-view="consommation_chauffage"] .sub-form[data-tab="consommation_chauffage"] {
         display: block;
     }
     form[data-tab-view="etiquette_dpe"] .sub-form[data-tab="etiquette_dpe"] {
