--- a/web/application/templates/api-documentation.html
+++ b/web/application/templates/api-documentation.html
@@ -30,12 +30,12 @@
                         <p class="text-light">https://france-energie.koyeb.app/api/v1</p>
                     </div>
                     <div class="doc-endpoint">
-                        <h2>Prédiction du cout du chauffage</h2>
+                        <h2>Prédiction de la consommation de chauffage (kwh)</h2>
                         <div class="endpoint">
                             <div class="method">
                                 <p>GET</p>
                             </div>
-                            <p class="text-light">/cout_chauffage</p>
+                            <p class="text-light">/consommation_chauffage</p>
                         </div>
                         <div class="parameters">
                             <p>Paramètres :</p>
@@ -90,7 +90,7 @@
                     <div class="code">
                         <img src="{{ url_for('static', filename='images/copy.svg') }}" alt="" class="copy-button" height="20px">
                         <pre>
-curl -G "https://france-energie.koyeb.app/api/v1/cout_chauffage" \
+curl -G "https://france-energie.koyeb.app/api/v1/consommation_chauffage" \
     --data-urlencode "valeur_1=30 rue de la republique, lyon" \
     --data-urlencode "valeur_2=55" \
     --data-urlencode "valeur_3=2024"
@@ -105,7 +105,7 @@ curl -G "https://france-energie.koyeb.app/api/v1/cout_chauffage" \
 import requests
 
 base_url = "https://france-energie.koyeb.app/api/v1"
-endpoint = "/cout_chauffage"
+endpoint = "/consommation_chauffage"
 
 params = {
     'valeur_1': "30 rue de la republique, lyon",
@@ -125,7 +125,7 @@ response = requests.get(base_url + endpoint, params=params)
 library(httr)
 
 base_url <- "https://france-energie.koyeb.app/api/v1"
-endpoint <- "/cout_chauffage"
+endpoint <- "/consommation_chauffage"
 
 response <- GET(
     url = paste0(base_url, endpoint),
@@ -143,8 +143,8 @@ response <- GET(
                 <h1>Playground</h1>
                 <form id="endpoints-menu">
                     <ul class="tabmenu">
-                        <li class="active" data-view="cout_chauffage">
-                            <p>Cout de chauffage</p>
+                        <li class="active" data-view="consommation_chauffage">
+                            <p>Consommation de chauffage</p>
                         </li>
                         <li data-view="etiquette_dpe">
                             <p>Etiquette DPE</p>
@@ -155,12 +155,12 @@ response <- GET(
                     <div class="method">
                         <p>GET</p>
                     </div>
-                    <p id="requests-url" class="text-light">https://france-energie.koyeb.app/api/v1/cout_chauffage</p>
+                    <p id="requests-url" class="text-light">https://france-energie.koyeb.app/api/v1/consommation_chauffage</p>
                 </section>
                 <section id="requests">
-                    <form action="" data-tab-view="cout_chauffage">
+                    <form action="" data-tab-view="consommation_chauffage">
                         <h2>Paramètres</h2>
-                        <div class="sub-form" data-tab="cout_chauffage">
+                        <div class="sub-form" data-tab="consommation_chauffage">
                             <div class="form-input">
                                 <label for="surface_habitable_logement">surface_habitable_logement</label>
                                 <input type="number" name="surface_habitable_logement" id="surface_habitable_logement" placeholder="int">
